# molmcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  release.yml
apps/molmcp-gateway/src/molmcp_gateway/: cli.py  config.py  server.py
apps/molmcp-gateway/tests/: test_cli.py  test_mount.py
docs/: index.md
docs/concepts/: architecture.md  middleware.md  naming.md  providers.md
docs/get-started/: deploy.md  installation.md  quickstart.md
docs/guides/: expose-a-package.md  security.md  write-a-provider.md
docs/reference/: api.md  cli.md
src/molmcp/: __init__.py  __main__.py  cli.py  provider.py  server.py
src/molmcp/helpers/: __init__.py  subprocess.py  text.py
src/molmcp/introspection/: __init__.py  _resolve.py  modules.py  search.py  source.py
src/molmcp/middleware/: __init__.py  annotations_validator.py  path_safety.py  response_limit.py
tests/: conftest.py
tests/fixture_pkg/: __init__.py
tests/fixture_pkg/sub/: __init__.py
tests/test_introspection/: test_tools.py
tests/test_middleware/: test_middleware.py
tests/test_provider/: test_provider.py
