[project]
name = "molcrafts-molmcp"
version = "0.1.0"
description = "The MCP foundation for the MolCrafts ecosystem"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}

authors = [
    { name = "Roy Kid", email = "lijichen365@gmail.com" }
]

keywords = [
    "mcp",
    "model-context-protocol",
    "molcrafts",
    "molecular-simulation",
    "introspection",
    "llm-tools",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]
docs = [
    "zensical>=0.0.37",
]

[project.scripts]
molmcp = "molmcp.cli:main"

[project.urls]
Homepage = "https://github.com/MolCrafts/molmcp"
Documentation = "https://molcrafts.github.io/molmcp/"
Repository = "https://github.com/MolCrafts/molmcp.git"
Issues = "https://github.com/MolCrafts/molmcp/issues"
Changelog = "https://github.com/MolCrafts/molmcp/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
molmcp-molpy   = { workspace = true }
molmcp-molexp  = { workspace = true }
molmcp-lammps  = { workspace = true }
molmcp-molpack = { workspace = true }
molmcp-gateway = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that exercise the full server",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
